# copilot-api-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  debug.sh
.github/workflows/: release.yml
scripts/: debug.sh  install.sh  release.sh
src/: lib.rs  main.rs  server.rs  state.rs  token.rs
src/anthropic/: mod.rs  stream.rs  translate.rs  types.rs
src/cmd/: auth.rs  mod.rs  start.rs
src/config/: api.rs  mod.rs  paths.rs  settings.rs
src/copilot/: chat.rs  embeddings.rs  mod.rs  models.rs
src/github/: access_token.rs  copilot_token.rs  device_code.rs  mod.rs  user.rs  vscode_version.rs
