[package]
name = "copilot-api-proxy"
version = "0.1.17"
edition = "2024"
description = "A local proxy that exposes GitHub Copilot as OpenAI and Anthropic compatible APIs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/liushoukai/copilot-api-proxy"
keywords = ["copilot", "proxy", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming::http-server"]
exclude = [
    "/.codegraph",
    "/.codebase-memory",
    "/.cursor",
    "/Cargo.toml.orig",
]

[[bin]]
name = "copilot-api-proxy"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonpath-rust = "0.7"
schemars = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-stream = "0.1.18"
futures = "0.3.32"
humansize = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
